--- a/app/views/layouts/step_three.html.erb
+++ b/app/views/layouts/step_three.html.erb
@@ -1,3 +1,3 @@
 <h1>Convert <%=@from_cur%></h1>
 
-<p>1 <%=@from_cur%> equals <%=@exchange_rate%> <%@to_cur%></p>
+<p>1 <%=@from_cur%> equals <%=@exchange_rate%> <%=@to_cur%></p>
