--- a/app/views/layouts/step_three.html.erb
+++ b/app/views/layouts/step_three.html.erb
@@ -1,3 +1,5 @@
-<h1>Convert <%=@from_cur%></h1>
+<h1>Convert <%=@from_cur%> to <%=@to_cur%></h1>
+
+<a href="/forex">back</a>
 
 <p>1 <%=@from_cur%> equals <%=@exchange_rate%> <%=@to_cur%></p>
