--- a/app/views/layouts/step_three.html.erb
+++ b/app/views/layouts/step_three.html.erb
@@ -1,5 +1,5 @@
 <h1>Convert <%=@from_cur%> to <%=@to_cur%></h1>
 
-<a href="/forex">back</a>
+<a href="/forex/<%=@from_cur%>">back</a>
 
-<p>1 <%=@from_cur%> equals <%=@exchange_rate%> <%=@to_cur%></p>
+<p>1 <%=@from_cur%> equals <%=@exchange_rate%> <%=@to_cur%>.</p>
