--- a/app/views/layouts/step_two.html.erb
+++ b/app/views/layouts/step_two.html.erb
@@ -1,9 +1,11 @@
 <h1>Convert <%=@from_cur%></h1>
 
+<a href="/forex">back</a>
+
 <ul>
   <% @currencies.each do |symbol| %>
     <li>
-      <a href="/forex/<%=@from_cur%>/<%=symbol%>/">Convert 1 <%=@from_cur%> to <%=symbol%>...</a>
+      <a href="/forex/<%=@from_cur%>/<%=symbol%>">Convert 1 <%=@from_cur%> to <%=symbol%>...</a>
     </li>
   <%end%>
 
